--- a/app/src/main/res/layout/row_chat.xml
+++ b/app/src/main/res/layout/row_chat.xml
@@ -13,40 +13,48 @@
   ~ See the License for the specific language governing permissions and
   ~ limitations under the License.
   -->
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:cardview="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/row_card_chat"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="100dp"
+    cardview:cardElevation="3dp"
+    cardview:cardUseCompatPadding="true">
 
-    <TextView
-        android:id="@+id/tv_chat_header_date"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/darker_gray"
-        android:paddingLeft="16dp"
-        android:text="Today" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_chat_name_and_user"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="26dp"
-        android:text="A chat by andre" />
+        <TextView
+            android:id="@+id/tv_chat_header_date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@android:color/darker_gray"
+            android:paddingLeft="16dp"
+            android:text="Today" />
 
-    <TextView
-        android:id="@+id/tv_chat_last_user_time"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="26dp"
-        android:text="Andre - 2 hours ago" />
+        <TextView
+            android:id="@+id/tv_chat_name_and_user"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="26dp"
+            android:text="A chat by andre" />
 
-    <TextView
-        android:id="@+id/tv_chat_last_message"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="26dp"
-        android:text="Whats up?" />
+        <TextView
+            android:id="@+id/tv_chat_last_user_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="26dp"
+            android:text="Andre - 2 hours ago" />
+
+        <TextView
+            android:id="@+id/tv_chat_last_message"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingLeft="26dp"
+            android:text="Whats up?" />
 
 
-</LinearLayout>
+    </LinearLayout>
+</android.support.v7.widget.CardView>
