--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -55,7 +55,15 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/create_chat"/>
-
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/pb_new_chat"
+        style="?android:attr/progressBarStyleLarge"
+        android:progressDrawable="@drawable/circular_progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone" />
 
 </FrameLayout>
