adjusting layouts creating dimens file

--- a/app/src/main/res/layout/activity_chatroom.xml
+++ b/app/src/main/res/layout/activity_chatroom.xml
@@ -8,7 +8,6 @@
         android:id="@+id/ll_edit_chat"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/darker_gray"
         android:clickable="true"
         android:orientation="vertical"
         android:visibility="gone">
@@ -30,17 +29,16 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_chat_room_messages"
         android:layout_width="match_parent"
-        android:layout_height="437dp"
-        android:layout_margin="16dp">
+        android:layout_height="@dimen/rv_chatroom_height"
+        android:layout_margin="@dimen/rv_chatroom_margin">
     </android.support.v7.widget.RecyclerView>
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#f3f3f3"
         android:layout_gravity="bottom"
-        android:paddingBottom="10.0dip"
-        android:paddingTop="10.0dip"
+        android:paddingBottom="@dimen/rl_chatroom_paddin_bottom_top"
+        android:paddingTop="@dimen/rl_chatroom_paddin_bottom_top"
         android:id="@+id/bottom_bar"
         android:layout_above="@+id/rv_chat_room_messages"
         android:layout_alignParentBottom="true">
@@ -50,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_marginLeft="10.0dip"
+            android:layout_marginLeft="@dimen/et_chatroom_margin_left"
             android:layout_toLeftOf="@+id/ib_chat_room_send"
             android:hint="Enter Message"/>
 
@@ -61,13 +59,13 @@
             android:layout_alignBottom="@+id/et_chat_room_message"
             android:layout_alignParentRight="true"
             android:layout_alignTop="@+id/et_chat_room_message"
-            android:layout_marginBottom="1px"
-            android:layout_marginRight="10.0dip"
-            android:layout_marginTop="1px"
-            android:paddingBottom="5.0dip"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingTop="5.0dip"
+            android:layout_marginBottom="@dimen/et_chatroom_margin_bottom"
+            android:layout_marginRight="@dimen/et_chatroom_margin_right"
+            android:layout_marginTop="@dimen/et_chatroom_margin_top"
+            android:paddingBottom="@dimen/et_chatroom_padding_bottom"
+            android:paddingLeft="@dimen/et_chatroom_padding_left"
+            android:paddingRight="@dimen/et_chatroom_padding_right"
+            android:paddingTop="@dimen/et_chatroom_padding_top"
             android:src="@android:drawable/ic_menu_share" />
     </RelativeLayout>
 
@@ -77,7 +75,7 @@
         android:progressDrawable="@drawable/circular_progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_centerInParent="true"
         android:visibility="gone" />
 
 </RelativeLayout>
