--- a/app/src/main/res/layout/row_chat.xml
+++ b/app/src/main/res/layout/row_chat.xml
@@ -17,11 +17,11 @@
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
     android:id="@+id/row_card_chat"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    cardview:cardElevation="3dp"
+    android:layout_height="@dimen/row_card_chat_height"
+    cardview:cardElevation="@dimen/row_card_chat_elevation"
     cardview:cardUseCompatPadding="true">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -31,30 +31,27 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@android:color/darker_gray"
-            android:paddingLeft="16dp"
-            android:text="Today" />
+            android:paddingLeft="@dimen/tv_card_header_padding_left" />
 
         <TextView
             android:id="@+id/tv_chat_name_and_user"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="26dp"
-            android:text="A chat by andre" />
+            android:paddingLeft="@dimen/tv_card_padding_left"
+            android:layout_below="@+id/tv_chat_header_date"/>
 
         <TextView
             android:id="@+id/tv_chat_last_user_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="26dp"
-            android:text="Andre - 2 hours ago" />
+            android:paddingLeft="@dimen/tv_card_padding_left"
+            android:layout_below="@+id/tv_chat_name_and_user"/>
 
         <TextView
             android:id="@+id/tv_chat_last_message"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="26dp"
-            android:text="Whats up?" />
-
-
-    </LinearLayout>
+            android:paddingLeft="@dimen/tv_card_padding_left"
+            android:layout_below="@+id/tv_chat_last_user_time"/>
+    </RelativeLayout>
 </android.support.v7.widget.CardView>
