--- a/app/src/main/res/layout/row_room_messages.xml
+++ b/app/src/main/res/layout/row_room_messages.xml
@@ -16,62 +16,65 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:cardview="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
-    cardview:cardElevation="3dp"
-    cardview:cardUseCompatPadding="true">
+    android:layout_height="@dimen/row_card_message_height"
+    cardview:cardElevation="@dimen/row_card_message_elevation"
+    cardview:cardUseCompatPadding="true"
+    android:layout_gravity="center_horizontal">
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/ll_chat_room_other_user"
-        android:layout_width="205dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
+        android:layout_gravity="start"
+        android:gravity="start"
         android:visibility="gone">
 
         <TextView
             android:id="@+id/tv_chat_room_message"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
+            android:layout_height="@dimen/row_tv_message_message_height"
             android:background="@android:color/darker_gray"
-            android:paddingLeft="16dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:text="Today" />
+            android:paddingLeft="@dimen/row_tv_message_message_padding_left_right"
+            android:paddingTop="@dimen/row_tv_message_message_padding_top_bottom"
+            android:paddingBottom="@dimen/row_tv_message_message_padding_top_bottom"
+            android:gravity="start"/>
 
         <TextView
             android:id="@+id/tv_chat_room_user_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="26dp"
-            android:text="A chat by andre" />
+            android:paddingLeft="@dimen/row_tv_message_message_padding_left_right"
+            android:gravity="start"
+            android:layout_below="@+id/tv_chat_room_message"/>
 
-    </LinearLayout>
+    </RelativeLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:id="@+id/ll_chat_room_local_user"
-        android:layout_width="205dp"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:layout_gravity="right"
+        android:layout_gravity="end"
+        android:gravity="end"
         android:visibility="gone">
 
         <TextView
             android:id="@+id/tv_chat_room_local_message"
             android:layout_width="match_parent"
-            android:layout_height="45dp"
-            android:background="@android:color/darker_gray"
-            android:paddingRight="16dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:text="Today"
-            android:gravity="right"/>
+            android:layout_height="@dimen/row_tv_message_message_height"
+            android:background="@android:color/holo_green_dark"
+            android:paddingRight="@dimen/row_tv_message_message_padding_left_right"
+            android:paddingTop="@dimen/row_tv_message_message_padding_top_bottom"
+            android:paddingBottom="@dimen/row_tv_message_message_padding_top_bottom"
+            android:gravity="end"/>
 
         <TextView
             android:id="@+id/tv_chat_room_local_user_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingRight="26dp"
-            android:text="A chat by andre"
-            android:gravity="right"/>
-
-    </LinearLayout>
+            android:paddingRight="@dimen/row_tv_message_message_padding_left_right"
+            android:gravity="end"
+            android:layout_below="@+id/tv_chat_room_local_message"/>
+    </RelativeLayout>
 </android.support.v7.widget.CardView>
